<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_face"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/paint_circle_fill"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView_category"
        android:scaleType="center"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/resbgr" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/imageView_category"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/textView_remark"
                android:text="@string/phone"
                android:textSize="20sp"
                android:layout_gravity="left"
                android:textColor="@color/account_darker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_time"
                android:textSize="15sp"
                android:textColor="@color/account_primary"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="RelativeOverlap,RtlHardcoded">

        <TextView
            android:id="@+id/textView_amount"
            android:text="@string/_2000_00"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/ac_circle_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>